--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Imagem 1</h2>
             <p>Esta imagem abaixo foi inserida utilizando a tag img, com um caminho absoluto (um link de um local da
                 web)</p>
-            <img width="300px"
+            <img width="300px" title="Uma imagem do google"
                 src="https://s2-ge.glbimg.com/yjfx6F0wIOGZvsyVR7eT30HHNQI=/0x0:2048x1365/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2023/Y/i/qBpR6QTSAKUafMVFzRNQ/52802915631-3662503e01-k.jpg"
                 alt="Texto alternativo: maior e melhor jogador de futebol que já jogou no rio grande do sul, vulgo Luís Alberto Suárez">
             <p>*A imagem acima foi ajustada para ficar com largura de 300px, a altura está ajustada automaticamente</p>
@@ -48,7 +48,7 @@
             <h2>Imagem 2</h2>
             <p>Esta imagem abaixo foi inserida utilizando a tag img, com um caminho relativo (está armazenada dentro do
                 repositório e referenciada) </p>
-            <img src="assets/suarez-gol-no-GREnada.webp"
+            <img src="assets/suarez-gol-no-GREnada.webp" title="Uma imagem guardada no repositório"
                 alt="Texto alternativo: Luís Suarez, marcando um gol no pequeno internacional, no clássico GREnada">
         </section>
     </main>
